--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
+    "ejs-mate": "^2.3.0",
+    "eventproxy": "^0.3.5",
     "express": "~4.13.1",
+    "log4js": "^0.6.38",
+    "mongoose": "^4.6.3",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
