--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eventproxy": "^0.3.5",
     "express": "~4.13.1",
     "log4js": "^0.6.38",
+    "markdown-it": "^8.0.0",
     "mongoose": "^4.6.3",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
